@@ -17,6 +17,18 @@ package org.apache.solr.handler;
  * limitations under the License.
  */
 
+import java.io.IOException;
+import java.lang.invoke.MethodHandles;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.concurrent.Callable;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Future;
+
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.impl.HttpSolrClient;
@@ -44,14 +56,6 @@ import org.apache.solr.util.DefaultSolrThreadFactory;
 import org.apache.solr.util.plugin.SolrCoreAware;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.io.IOException;
-import java.lang.invoke.MethodHandles;
-import java.util.*;
-import java.util.concurrent.Callable;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Future;
 
 /**
  * <p>
@@ -406,11 +410,11 @@ public class CdcrRequestHandler extends RequestHandlerBase implements SolrCoreAw
     }
 
     UpdateLog ulog = core.getUpdateHandler().getUpdateLog();
-    UpdateLog.RecentUpdates recentUpdates = ulog.getRecentUpdates();
-    List<Long> versions = recentUpdates.getVersions(1);
-    long lastVersion = versions.isEmpty() ? -1 : Math.abs(versions.get(0));
-    rsp.add(CdcrParams.CHECKPOINT, lastVersion);
-    recentUpdates.close();
+    try (UpdateLog.RecentUpdates recentUpdates = ulog.getRecentUpdates()) {
+      List<Long> versions = recentUpdates.getVersions(1);
+      long lastVersion = versions.isEmpty() ? -1 : Math.abs(versions.get(0));
+      rsp.add(CdcrParams.CHECKPOINT, lastVersion);
+    }
   }
 
   private void handleEnableBufferAction(SolrQueryRequest req, SolrQueryResponse rsp) {
